src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Name</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>Invoice</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Invoice</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Order_Id__c</fullName>
        <label>Unique Order Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Invoice-{0000}</displayFormat>
        <label>Invoice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>